# muchtodo-server

./: .gitignore  Cargo.toml  LICENCE  README.md
migrations/2018-02-24-050459_init_tables/: down.sql  up.sql
migrations/2018-08-01-055630_create_oauth/: down.sql  up.sql
src/: api.rs  db.rs  guards.rs  main.rs  models.rs  schema.rs
